--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     stages {
         stage('Build Docker Image') {
             steps {
-                sh 'dcoker build -t pkdu14/webapp:$BUILD_NUMBER .'
+                sh 'docker build -t pkdu14/webapp:$BUILD_NUMBER .'
             }
         }
     }
