Login to DockerHub

--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    environment {
+        DOCKERHUB_CREDENTIALS = credentials('jk-dh-tk')
+    }
 
     stages {
         stage('SCM Checkout') {
