--- a/Demanda3/Dockerfile
+++ b/Demanda3/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:2.7
-WORKDIR /html
-COPY index.html .
-EXPOSE 3000
-CMD python -m SimpleHTTPServer 3000
+    FROM python:2.7
+    WORKDIR /html
+    COPY index.html .
+    EXPOSE 3000
+    CMD python -m SimpleHTTPServer 3000 -b 0.0.0.0
