--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -29,22 +29,24 @@ pipeline {
            }
        }
 
-       stage('Deploy Application') {
-           steps {
-               script {
-                   sh '''
-                   # Verifica e remove containers existentes
-                   if [ "$(docker ps -q -f name=webapp_ctr)" ]; then
-                       docker stop webapp_ctr || true
-                       docker rm webapp_ctr || true
-                   fi
+      stage('Deploy Application') {
+   steps {
+       script {
+           sh '''
+           # Verifica se existe um contêiner rodando com o nome "webapp_ctr" e o para
+           if [ "$(docker ps -q -f name=webapp_ctr)" ]; then
+               echo "Parando e removendo o contêiner existente..."
+               docker stop webapp_ctr || true
+               docker rm webapp_ctr || true
+           fi
 
-                   # Executa o novo contêiner
-                   docker run --rm -d -p 8084:3000 --name webapp_ctr pkdu14/webapp:${BUILD_NUMBER}
-                   '''
-               }
-           }
+           # Executa o novo contêiner na porta 3000
+           echo "Iniciando o novo contêiner..."
+           docker run --rm -d -p 8084:3000 --name webapp_ctr pkdu14/webapp:${BUILD_NUMBER}
+           '''
        }
+   }
+}
 
        stage('Execute Commands in Container') {
            steps {
