--- a/Demanda3/Dockerfile
+++ b/Demanda3/Dockerfile
@@ -2,4 +2,4 @@
     WORKDIR /html
     COPY . .
     EXPOSE 3000
-    CMD python -m SimpleHTTPServer 3000 -b 0.0.0.0
+    CMD python -m SimpleHTTPServer 3000 
