--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -7,10 +7,11 @@ pipeline {
                 git branch: 'main', credentialsId: 'jk-gh-tk', url: 'https://github.com/Franck-Patrick/Desafio_DellTech.git'
             }
         }
-        stage('Build Docker Image') {
-    steps {
-        sh 'docker build -t pkdu14/webapp:${BUILD_NUMBER} .'
-    }
-}
+
+        stage('Build Docker image') {
+            steps {
+                sh 'docker build -t pkdu14/webapp:$BUILD_NUMBER . '
+            }
+        }
     }
 }
