--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -21,5 +21,12 @@ pipeline {
         sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
             }
         }
+       
+        stage('Push Image') {
+    steps {
+        sh 'docker push pkdu14/webapp:$BUILD_NUMBER'
+    }
+}
+
     }
 }
