--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -25,8 +25,16 @@ pipeline {
         stage('Push Image') {
     steps {
         sh 'docker push pkdu14/webapp:$BUILD_NUMBER'
-    }
-}
+             }
+        }
 
+stage('Deploy Application') {
+    steps {
+        sh '''
+            docker stop webapp_ctr
+            docker run -d -p 3000:3000 --name webapp_ctr pkdu14/webapp:${BUILD_NUMBER}
+           '''
+            }
+        }
     }
 }
