--- a/Demanda1/main/api/Dockerfile
+++ b/Demanda1/main/api/Dockerfile
@@ -1,4 +1,9 @@
+FROM maven:3.8.5-openjdk-17 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-alpine
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY --from=build /app/${JAR_FILE} app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
