--- a/Demanda1/main/api/pom.xml
+++ b/Demanda1/main/api/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.rafael-menapi</groupId>
+	<groupId>com.patrick-menapi</groupId>
 	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api</name>
