realizando testes no jenkins

--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -10,9 +10,10 @@ pipeline {
 
         stage('Build Docker image') {
     steps {
-        sh 'docker build -f Demanda3/Dockerfile -t pkdu14/webapp:$BUILD_NUMBER .'
-            }
-        }
+        sh 'docker build -f Demanda3/Dockerfile -t webapp:$BUILD_NUMBER .'
+    }
+}
+
      
 stage('Deploy Application') {
     steps {
