--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -7,5 +7,10 @@ pipeline {
                 git branch: 'main', credentialsId: 'jk-gh-tk', url: 'https://github.com/Franck-Patrick/Desafio_DellTech.git'
             }
         }
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -t pkdu14/webapp:$BUILD_NUMBER .'
+            }
+        }       
     }
 }
