--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t pkdu14/webapp:$BUILD_NUMBER .'
+                sh 'docker build -f Demanda3/Dockerfile -t pkdu14/webapp:$BUILD_NUMBER .'
             }
         }       
     }
