--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -1,9 +1,8 @@
 pipeline {
     agent any
     environment {
-    DOCKERHUB_CREDENTIALS = credentials('jk-dh-tk')
+    DOCKERHUB_CREDENTIALS = credentials('jk-dh-th')
 }
-
     stages {
         stage('SCM Checkout') {
             steps {
