--- a/Demanda3/Jenkinsfile
+++ b/Demanda3/Jenkinsfile
@@ -7,5 +7,11 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/Franck-Patrick/Desafio_DellTech.git'
             }
         }
+
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -f Demanda3/Dockerfile -t pkdu14/webapp:$BUILD_NUMBER .'
+            }
+        }
     }
 }
